# CanvasMCPServer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: canvas-api.mdc  git-workflow.mdc
docs/: canvas-api-knowledge.md
scripts/: run_server.py
src/canvas_mcp_server/: __init__.py  config.py  py.typed  server.py  types.py
src/canvas_mcp_server/constants/: __init__.py  course_query_includes.py
src/canvas_mcp_server/models/: __init__.py
src/canvas_mcp_server/models/announcements/: announcement_model.py
src/canvas_mcp_server/models/assignments/: assignment_detail_model.py  assignment_summary_model.py  upcoming_assignment_model.py
src/canvas_mcp_server/models/courses/: course_calendar_model.py  course_detail_model.py  course_progress_model.py  course_summary_model.py  course_term_model.py
src/canvas_mcp_server/models/grades/: course_grades_model.py
src/canvas_mcp_server/models/submissions/: submission_status_model.py
src/canvas_mcp_server/models/todos/: todo_item_model.py
src/canvas_mcp_server/tools/: __init__.py  hello_world.py
src/canvas_mcp_server/tools/announcements/: __init__.py  get_announcements.py
src/canvas_mcp_server/tools/assignments/: __init__.py  get_assignment_details.py  get_assignments_for_course.py  get_upcoming_assignments.py
src/canvas_mcp_server/tools/courses/: __init__.py  get_all_courses.py  get_courses.py  get_courses_by_id.py
src/canvas_mcp_server/tools/courses/constants/: __init__.py  course_default_view.py  course_display_field.py  course_enrollment_constants.py  course_workflow_state.py
src/canvas_mcp_server/tools/courses/models/: __init__.py  course_calendar_model.py  course_model.py  course_progress_model.py  course_query_model.py  course_term_model.py
src/canvas_mcp_server/tools/courses/types/: __init__.py  course_fields.py  enums.py  query_params.py
src/canvas_mcp_server/tools/grades/: __init__.py  get_course_grades.py
src/canvas_mcp_server/tools/submissions/: __init__.py  get_submission_status.py
src/canvas_mcp_server/tools/todos/: __init__.py  get_todo_items.py
src/canvas_mcp_server/utils/: __init__.py  canvas_api.py  http_client.py
tests/: __init__.py  test_api_request.py  test_hello_world.py
